Adicionando media query para mobile

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <input type="text" placeholder="Qual frase criativa você gostaria de falar? :) ">
                 </div>
 
-                <input type="submit" value="Cadastrar">
+                <input type="submit" value="Login">
 
             </form>
         </section>
